style: fixed styling so the header doesn't overlap with page content

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 
+.app {
+  display: flex;
+  min-width: 100vw;
+  min-height: 100vh;
+  margin-top: 25px;
+}
+
 body {
   margin: 0;
   color: black;
