--- a/src/modules/header-menu/styles.css
+++ b/src/modules/header-menu/styles.css
@@ -10,6 +10,7 @@
   background-color: #fff;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: 3;
 }
@@ -56,7 +57,7 @@
 .header .menu-icon {
   cursor: pointer;
   display: inline-block;
-  float: right;
+  /* float: right; */
   padding: 28px 20px;
   position: relative;
   user-select: none;
